Closed Bug 1858238 Opened 1 year ago Closed 1 year ago

Crash in [@ shutdownhang | memcpy | nsCharTraits<T>::copy]

Categories

(Core :: Networking: HTTP, defect, P2)

Firefox 120
Unspecified
Windows 10
defect

Tracking

()

RESOLVED FIXED
125 Branch
Tracking Status
firefox125 --- fixed

People

(Reporter: Robert_Hartmann, Assigned: smayya)

References

(Regression)

Details

(Whiteboard: [necko-triaged][necko-priority-new])

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/8522a86b-c3d9-4a46-a22b-d0dfd0231010

MOZ_CRASH Reason: Shutdown hanging at step AppShutdownConfirmed. Something is blocking the main-thread.

Top 10 frames of crashing thread:

0  VCRUNTIME140.dll  memcpy  d:\a01\_work\2\s\src\vctools\crt\vcruntime\src\string\amd64\memcpy.asm:129
1  xul.dll  nsCharTraits<char>::copy  xpcom/string/nsCharTraits.h:313
1  xul.dll  nsTSubstring<char>::Append  xpcom/string/nsTSubstring.cpp:800
1  xul.dll  nsTSubstring<char>::Append  xpcom/string/nsTSubstring.cpp:767
2  xul.dll  nsTSubstring<char>::AppendLiteral  xpcom/string/nsTSubstring.h:728
2  xul.dll  mozilla::net::nsHttpRequestHead::Flatten  netwerk/protocol/http/nsHttpRequestHead.cpp:361
3  xul.dll  mozilla::net::nsHttp::ConvertRequestHeadToString  netwerk/protocol/http/nsHttp.cpp:523
4  xul.dll  mozilla::net::nsHttpTransaction::Init  netwerk/protocol/http/nsHttpTransaction.cpp:258
5  xul.dll  mozilla::net::nsHttpChannel::SetupTransaction  netwerk/protocol/http/nsHttpChannel.cpp:1456
5  xul.dll  mozilla::net::nsHttpChannel::DoConnectActual  netwerk/protocol/http/nsHttpChannel.cpp:991

sadly I cannot give any information after which situation the crash happens

The Bugbug bot thinks this bug should belong to the 'Core::Networking: HTTP' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → Networking: HTTP
Product: Firefox → Core

The bug has a crash signature, thus the bug will be considered confirmed.

Status: UNCONFIRMED → NEW
Ever confirmed: true

Note that not all crashes are related to necko, but there are some crashes happened in nsHttpTransaction::Init.
Maybe it's worth to add a shutdown check in nsHttpTransaction::Init to avoid initialize a transaction during shutdown.

Severity: -- → S3
Priority: -- → P2
Whiteboard: [necko-triaged][necko-priority-new]
Keywords: stalled
Whiteboard: [necko-triaged][necko-priority-new] → [necko-triaged]

We should add the shutdown check in the nsHttpTransaction::Init and see if this intermittent goes away.

Assignee: nobody → smayya
Whiteboard: [necko-triaged] → [necko-triaged][necko-priority-new]
Attachment #9381871 - Attachment description: Bug 1858238 - add shutdown in check in nsHttpTransaction::Init. r=#necko → Bug 1858238 - add shutdown check in nsHttpTransaction::Init(). r=#necko
Pushed by smayya@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/456388e7ad5e add shutdown check in nsHttpTransaction::Init(). r=necko-reviewers,valentin
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch

Since the bug is closed, the stalled keyword is now meaningless.
For more information, please visit BugBot documentation.

Keywords: stalled
Regressed by: 1931956
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: