Bug 1858238 - add shutdown check in nsHttpTransaction::Init(). r=necko-reviewers,valentin

Differential Revision: https://phabricator.services.mozilla.com/D202353